infra/k8s/expiration-redis-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-redis-deploy
spec:
  selector:
    matchLabels:
      app: expiration-redis
  template:
    metadata:
      labels:
        app: expiration-redis
    spec:
      containers:
      - name: expiration-redis
        image: redis
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: expiration-redis-srv
spec:
  selector:
    app: expiration-redis
  ports:
  - port: 6379
    targetPort: 6379
