infra/k8s/payments-mongodb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-mongo-deploy
spec:
  selector:
    matchLabels:
      app: payments-mongo
  template:
    metadata:
      labels:
        app: payments-mongo
    spec:
      containers:
      - name: payments-mongo
        image: mongo
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: payments-mongo-srv
spec:
  selector:
    app: payments-mongo
  ports:
  - port: 27017
    targetPort: 27017
