infra/k8s/tickets-mongodb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-mongo-deploy
spec:
  selector:
    matchLabels:
      app: tickets-mongo
  template:
    metadata:
      labels:
        app: tickets-mongo
    spec:
      containers:
      - name: tickets-mongo
        image: mongo
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-mongo-srv
spec:
  selector:
    app: tickets-mongo
  ports:
  - port: 27017
    targetPort: 27017
